# luh_youbot_os

./: .gitignore  README.md
luh_laser_watchdog/: CMakeLists.txt  package.xml
luh_laser_watchdog/cfg/: params.yaml
luh_laser_watchdog/include/luh_laser_watchdog/: collision_watchdog.h  common.h  footprint_reader.h  laser.h  watchdog.h
luh_laser_watchdog/launch/: watchdog.launch
luh_laser_watchdog/msg/: Distances.msg
luh_laser_watchdog/src/: collision_watchdog.cpp  common.cpp  footprint_reader.cpp  laser.cpp  watchdog.cpp
luh_laser_watchdog/test/: test_services.cpp  test_watchdog.test
luh_youbot_calibration/: CMakeLists.txt  package.xml
luh_youbot_calibration/data/: calibrationPoses.yaml  data.yaml  params_01.yaml  params_02.yaml  params_a0.yaml  params_a1.yaml  params_a2.yaml
luh_youbot_calibration/src/: dynamics_calibration.cpp  static_calibration.cpp
luh_youbot_controller/: CMakeLists.txt  library_symlink_creator.bash  package.xml
luh_youbot_controller/cfg/module_base_controller/: params.yaml
luh_youbot_controller/cfg/module_gravity_compensation/: params.yaml  params_old.yaml
luh_youbot_controller/cfg/module_gripper/: object_width.yaml  params.yaml
luh_youbot_controller/cfg/module_motion_planner/: poses.yaml
luh_youbot_controller/examples/: simple_module_example.cpp  simple_module_example.h
luh_youbot_controller/launch/: controller.launch  controller_with_new_gripper.launch  gazebo_controller.launch  load_default_parameters.launch  vrep_controller.launch  youbot_state_publisher.launch
luh_youbot_controller_api/: CMakeLists.txt  Doxyfile  package.xml
luh_youbot_controller_api/src/: youbot_arm.cpp  youbot_base.cpp  youbot_gripper.cpp
luh_youbot_description/: CMakeLists.txt  package.xml
luh_youbot_description/launch/: youbot.launch
luh_youbot_description/robots/: test.urdf  youbot.sdf  youbot.urdf.xacro  youbot_base.urdf.xacro  youbot_gazebo.xacro
luh_youbot_description/urdf/: common.xacro
luh_youbot_driver_api/: CMakeLists.txt  package.xml
luh_youbot_driver_api/cfg/: default_params.yaml
luh_youbot_driver_api/launch/: load_default_parameters.launch
luh_youbot_driver_api/src/: arduino_gripper.cpp  arm_interface.cpp  base_interface.cpp  youbot_interface.cpp
luh_youbot_gazebo/: CMakeLists.txt  package.xml
luh_youbot_gazebo/launch/: 2010_RC.launch  2016_RC_Leipzig.launch  Changes  Changes~  base_only.launch  spawn_obstacles.launch  youbot.launch  youbot_nogui.launch  youbot_rc.launch
luh_youbot_gazebo/src/: arm_interface.cpp  base_interface.cpp  youbot_interface.cpp
luh_youbot_gazebo/worlds/: 2016_RC_Leipzig.urdf  BuildingDefaultName.sdf  layout_leipzig2.world  layout_leipzig_neu.world  test_world_magdeburg.world  youbot_demo.world  youbot_empty.world
luh_youbot_gripper/: CMakeLists.txt  README  package.xml
luh_youbot_gripper/cfg/: params.yaml
luh_youbot_gripper/launch/: gripper.launch
luh_youbot_gripper/src/: gripper.cpp  gripper_node.cpp  main.cpp  test_node.cpp
luh_youbot_gui/: CMakeLists.txt  mainpage.dox  package.xml
luh_youbot_gui/cfg/: params.yaml
luh_youbot_gui/resources/: images.qrc
luh_youbot_gui/src/: angle_tool.cpp  arm_control_window.cpp  arm_side_view.cpp  cartesian_tool.cpp  file_reader.cpp  main.cpp  main_window.cpp  qnode.cpp  render_area.cpp  vertical_angle_tool.cpp
luh_youbot_joy_teleop/: CMakeLists.txt  package.xml
luh_youbot_joy_teleop/cfg/: default_config.yaml
luh_youbot_joy_teleop/launch/: joy_teleop.launch
luh_youbot_joy_teleop/src/: joy_teleop_node.cpp
luh_youbot_kinematics/: CMakeLists.txt  Doxyfile  package.xml
luh_youbot_kinematics/src/: arm_dynamics.cpp  cartesian_vector.cpp  cylindric_vector.cpp  generic_vector.cpp  joint_vector.cpp
luh_youbot_manipulation/: CMakeLists.txt  package.xml
luh_youbot_manipulation/examples/: simple_module_example.cpp  simple_module_example.h
luh_youbot_manipulation/launch/: gazebo_manipulation.launch  load_default_parameters.launch  manipulation.launch  vrep_manipulation.launch  youbot_state_publisher.launch
luh_youbot_manipulation_api/: CMakeLists.txt  Doxyfile  package.xml
luh_youbot_manipulation_api/src/: youbot_arm.cpp  youbot_base.cpp  youbot_gripper.cpp
luh_youbot_msgs/: CMakeLists.txt  package.xml
luh_youbot_msgs/action/: AlignBaseToPose.action  ApproachBase.action  Empty.action  ForceFit.action  GripObject.action  MoveBase.action  MoveCartesianPath.action  MoveCylindricPath.action  MoveJointPath.action  MoveNamedPath.action  MoveToCartesianPose.action  MoveToCylindricPose.action  MoveToJointPose.action  MoveToNamedPose.action  SetGripper.action
luh_youbot_msgs/msg/: CartesianPath.msg  CartesianVector.msg  CylindricPath.msg  CylindricVector.msg  JointPath.msg  JointVector.msg  NamedPath.msg
luh_youbot_msgs/srv/: GetArmPose.srv  GetBasePose.srv  GetLoad.srv  GripCheck.srv  ListPoses.srv  SetCartesianVelocity.srv  SetCylindricVelocity.srv  SetJointVelocity.srv  ToPredefinedPose.srv
luh_youbot_os/: CMakeLists.txt  package.xml
luh_youbot_poses/: CMakeLists.txt  package.xml
luh_youbot_poses/poses/: poses.yaml
luh_youbot_poses/src/: youbot_poses.cpp  youbot_poses.cpp.autosave
luh_youbot_vrep_api/: CMakeLists.txt  package.xml
luh_youbot_vrep_api/src/: arm_interface.cpp  base_interface.cpp  common.cpp  youbot_interface.cpp
youbot_description/: CMakeLists.txt  package.xml
youbot_description/gazebo/: gazebo.urdf.xacro
youbot_description/robots/: youbot.urdf.xacro  youbot_RC.urdf  youbot_RC.urdf.xacro  youbot_arm.urdf.xacro  youbot_base.urdf.xacro  youbot_gripper.urdf.xacro  youbot_sensors.urdf.xacro
youbot_driver/: CMakeLists.txt  package.xml
youbot_driver/config/: youbot-ethercat.cfg  youbot-manipulator.cfg  youbot-manipulator_complete_original_config.cfg  youbot-manipulator_imes_gripper.cfg  youbot-manipulator_nogripper.cfg  youbot-manipulator_nogripper_nobase.cfg  youbot-manipulator_original_gripper.cfg
youbot_driver/youbot/: EthercatMasterWithThread.cpp
youbot_gazebo_plugins/: CMakeLists.txt  package.xml
youbot_gazebo_plugins/src/: arm_controller.cpp  base_controller.cpp  joint_state_publisher.cpp
(+409 files in other folders)
