<?xml version="1.0"?>
<package>
  <name>luh_youbot_calibration</name>
  <version>0.0.0</version>
  <description>The calibration node can be used to identify the static parameters of the youbot manipulator. The static parameters are e.g. needed for gravity compensation. </description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>luh_youbot_controller_api</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>luh_youbot_controller_api</run_depend>
</package>
