<?xml version="1.0"?>
<package>
  <name>luh_youbot_controller</name>
  <version>1.0.0</version>
  <description>The Controller Node is the central component of the SDK. It is responsible for trajectory planning and motion execution. It provides various subscribers, service servers and action servers for different kinds of motion commands for the manipulator, the gripper and the base.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>luh_youbot_driver_api</build_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>luh_youbot_poses</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>luh_youbot_vrep_api</build_depend>
  <build_depend>luh_youbot_gazebo</build_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>luh_youbot_driver_api</run_depend>
  <run_depend>luh_youbot_kinematics</run_depend>
  <run_depend>luh_youbot_msgs</run_depend>
  <run_depend>luh_youbot_poses</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>luh_youbot_vrep_api</run_depend>
  <run_depend>luh_youbot_gazebo</run_depend>

</package>
