<?xml version="1.0"?>
<package format="2">
  <name>luh_youbot_controller</name>
  <version>0.0.0</version>
  <description>The Controller Node is the central component of the SDK. It is responsible for trajectory planning and motion execution. It provides various subscribers, service servers and action servers for different kinds of motion commands for the manipulator, the gripper and the base.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>luh_youbot_driver_api</build_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>luh_youbot_poses</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>luh_youbot_vrep_api</build_depend>
  <build_depend>luh_youbot_gazebo</build_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>luh_youbot_driver_api</exec_depend>
  <exec_depend>luh_youbot_kinematics</exec_depend>
  <exec_depend>luh_youbot_msgs</exec_depend>
  <exec_depend>luh_youbot_poses</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>luh_youbot_vrep_api</exec_depend>
  <exec_depend>luh_youbot_gazebo</exec_depend>

</package>
