<?xml version="1.0"?>
<package>
  <name>luh_youbot_controller_api</name>
  <version>1.0.0</version>
  <description>The Controller API provides a user friendly programming interface for the motion commands of the Controller Node. This is the most important package for application developers.</description>
  <maintainer email="info@luhbots.de">Simon Aden</maintainer>
  
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>luh_youbot_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>luh_youbot_kinematics</run_depend>
  <run_depend>message_generation</run_depend>

</package>
