<?xml version="1.0"?>
<package>
  <name>luh_youbot_description</name>
  <version>1.0.0</version>
  <description>Contains the youBot model with URDF files and meshes (based on the original youbot_description by Alexey Zakharov and Sebastian Blumenthal)</description>
  <author>Simon Aden</author>
  <maintainer email="info@luhbots.de">LUHbots</maintainer>
  <license>LGPL, BSD</license>
  <url>http://ros.org/wiki/youbot_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
