<?xml version="1.0"?>
<package>
  <name>luh_youbot_gazebo</name>
  <version>0.0.0</version>
  <description>The luh_youbot_gazebo package</description>

  <maintainer email="simon.aden@mailbox.org">Simon Aden</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>setcap</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <build_depend>luh_youbot_interface</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>luh_youbot_kinematics</run_depend>
  <run_depend>luh_youbot_interface</run_depend>

</package>
