<?xml version="1.0"?>
<package>
  <name>luh_youbot_gripper</name>
  <version>1.0.0</version>
  <description>Node for the arduino-controlled gripper version 2.0.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>luh_youbot_msgs</run_depend>

</package>
