<?xml version="1.0"?>
<package>
  <name>luh_youbot_joy_teleop</name>
  <version>0.0.0</version>
  <description>The Joy Teleop Node allows manual control of the youbot with a game controller.</description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>luh_youbot_controller_api</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>luh_youbot_controller_api</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
