<?xml version="1.0"?>
<package>
  <name>luh_youbot_kinematics</name>
  <version>1.0.0</version>
  <description>The Youbot Kinematics provides tools to calculate forward kinematics, inverse kinematics and statics of the youbot manipulator. </description>

  <maintainer email="info@luhbots.de">Simon Aden</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>luh_youbot_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
