<?xml version="1.0"?>
<package>
  <name>luh_youbot_manipulation</name>
  <version>0.0.0</version>
  <description>The luh_youbot_manipulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="simon.aden@mailbox.org">Simon Aden</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>luh_youbot_interface</build_depend>
  <build_depend>luh_youbot_kinematics</build_depend>
  <build_depend>luh_youbot_msgs</build_depend>
  <build_depend>luh_youbot_poses</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>luh_youbot_vrep_interface</build_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>luh_youbot_interface</run_depend>
  <run_depend>luh_youbot_kinematics</run_depend>
  <run_depend>luh_youbot_msgs</run_depend>
  <run_depend>luh_youbot_poses</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>luh_youbot_vrep_interface</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
